# better-cov

./: README.md  action.yml  pyproject.toml
.github/workflows/: release.yml
better_cov/: __init__.py  __main__.py  cli.py  reporter.py  scorer.py
better_cov/indicators/: base.py  import_count.py
better_cov/parsers/: cobertura.py
