[project]
name = "better-cov"
version = "0.1.0"
description = "Coverage score weighted by function importance"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["coverage", "testing", "pytest", "code-quality", "ci", "weighted-coverage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [{ name = "Geoffrey Pruvost" }]
urls.Homepage = "https://github.com/diagngrow/better-cov"
urls.Repository = "https://github.com/diagngrow/better-cov"
urls.Issues = "https://github.com/diagngrow/better-cov/issues"
dependencies = []

[project.scripts]
better-cov = "better_cov.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["better_cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
